--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
         "morgan": "^1.9.1",
         "nodemon": "^2.0.22",
         "npm": "^9.6.5",
+        "stripe": "^12.10.0",
         "uuid": "^3.3.3"
     }
 }
